--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
-title: 'Sally Laboratory'
+title: "Sally's Laboratory"
 description: 'your web description'
 keywords: 'your web keywords, another keywords'
 url: 'https://sally4388you.github.io'
 
 nav:
   Home: '/'
-  Blogs: '/tags.html'
+  Blogs: '/blogs.html'
   # Timeline: '/timeline.html'
-  Project Showcase: '/friendLink.html'
+  Project Showcase: '/showcase.html'
   About: '/about.html'
 
 author: true
 name: 'Sally Qi'
 NickName: 'Sally'
-webtitle: 'Sally Lab'
+webtitle: "Sally's Lab"
 bio: 'Web application developer. Cat lover'
 about: true
-aboutyou: 'Have 3+ years of experience with web application development. 4 months leetcode lover. Just build this site recently. Let me think about who I am here'
-portraits: '/assets/profile.png'
+aboutyou: 'Just build this site recently. Let me think about who I am here'
+portraits: '/assets/pics/profile.png'
 
 SNS: true
 SNS-icon:
@@ -32,6 +32,16 @@ paginatepath: ['page:num']
 footer:
   since: 2020
 
+
+projects:
+  MySQL Generator:
+    url: 'https://www.jekyll.com.cn/'
+    cover: '/assets/pics/mysql.png'
+  Combination Tool:
+    url: 'https://www.jekyll.com.cn/'
+    cover: '/assets/pics/combine.jpg'
+
+
 # Markdown
 markdown: kramdown
 kramdown:
@@ -39,9 +49,6 @@ kramdown:
 highlighter: rouge
 # options: autumn\ default\ emacs\ friendly\ manni\ murphy\ pastie\ perldoc\ tango 
 pygmentsTheme: 'friendly'
-
-friends:
-  jekyll: 'https://www.jekyll.com.cn/'
 
 # 评论 最佳体验 在disqus、livere和Gitment之间三选一
 # disqus 评论
