deployed combination tool

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ projects:
     url: '###'
     cover: '/assets/pics/mysql.png'
   Combination Tool:
-    url: '###'
+    url: 'http://combine.qblaboratory.cn/'
     cover: '/assets/pics/combine.jpg'
 
 
